# conpub

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.agents/plugins/: marketplace.json
.agents/skills/conpub/: SKILL.md
.agents/skills/conpub/agents/: openai.yaml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  release.yml
plugins/conpub/.claude-plugin/: plugin.json
plugins/conpub/.codex-plugin/: plugin.json
plugins/conpub/skills/conpub/: SKILL.md
plugins/conpub/skills/conpub/agents/: openai.yaml
scripts/: check-plugin-package.py  pack-plugin.sh
src/: cli.rs  main.rs
src/application/: agent.rs  binding.rs  local_query.rs  mod.rs  publishing.rs
src/domain/: hierarchy.rs  mod.rs  models.rs  sync_plan.rs  tags.rs
src/infrastructure/: agent_plugin.rs  archive.rs  assets.rs  config.rs  filesystem.rs  mod.rs  publishing.rs  search_index.rs  source_inspection.rs  sync_state.rs  title.rs  typub_status.rs
src/support/: mod.rs
tests/: cli.rs
