[package]
name = "conpub"
version = "0.1.4"
edition = "2024"
rust-version = "1.96"
description = "Agent-first CLI for publishing local knowledge files to Confluence Cloud"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/conpub"
repository = "https://github.com/lucifer1004/conpub"
keywords = ["confluence", "publishing", "knowledge-base", "agents"]
categories = ["command-line-utilities", "text-processing"]
include = [
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "src/**",
    "tests/**",
]

[dependencies]
agent-plugin-installer = { version = "0.6", features = ["clap"] }
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots", "charset", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
toml = "1"
typub-config = "0.1"
typub-core = "0.1"
typub-engine = { version = "0.1", default-features = false }
typub-storage = { version = "0.1", default-features = false }
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
